<resources>
    <string name="app_name">E-Barang Bukti Majene</string>
    <string name="tv_institution">KEJAKSAAN NEGERI MAJENE</string>
    <string name="tv_title1">E-BARANG BUKTI</string>
    <string name="tv_title_name">E - BARANG BUKTI</string>
    <string name="tv_subtitle">KEJAKSAAN TINGGI MAJENE</string>
    <string name="tv_category">Kategori</string>
    <string name="tv_process">Sedang \n Diproses</string>
    <string name="tv_taken">Dirampas Negara / Dimusnahkan</string>
    <string name="tv_return">Dikembalikan Ke Yang Berhak</string>
    <string name="tv_add">Tambah \n Barang Bukti</string>
    <string name="tv_status">Status</string>
    <string name="tv_item_name">Nama Barang Bukti</string>
    <string name="tv_registration">No. Registrasi</string>
    <string name="tv_desc">Keterangan</string>
    <string name="tv_status_change">Ganti Status</string>
    <string name="tv_title_item">Tambah \n Barang Bukti</string>
    <string name="tv_name_case">Nama Perkara</string>
    <string name="tv_category_menu">KATEGORI</string>
    <string name="tv_detail">Detail</string>
    <string name="tv_category_subtitle">Lihat Daftar Barang Bukti</string>
    <string name="tv_subtitle_add">Tambahkan Barang Bukti Baru</string>
    <string name="tv_sub_landing">Selamat datang di aplikasi E - Barang bukti Kejaksaan Negeri Majene. Silahkan klik tombol mulai untuk memilih kategori.</string>
    <string name="title_landing">E - Barbuk Kejari Majene</string>
    <string name="tv_start">Mulai</string>
</resources>
