<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/ShowImageView"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:layout_height="250dp"
            android:src="@drawable/ic_photo_camera_black_24dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@id/tv_item_status"
                style="@style/TextContent.Small.White"
                android:drawableStart="@drawable/ic_check_black_24dp"
                android:background="#4D000000"
                android:drawablePadding="4dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="200dp"
                android:padding="8dp"
                android:text="@string/tv_status"
                android:textColor="@android:color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/coloronSecondary"
                android:layout_below="@id/tv_item_status"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_item_name"
                    style="@style/TextContent.Black"
                    android:textSize="32sp"
                    android:text="@string/tv_item_name"
                    android:layout_marginTop="@dimen/activity_vertical"/>

                <TextView
                    android:id="@+id/tv_item_Registration"
                    style="@style/TextContent.Subtitle"
                    android:text="@string/tv_registration"
                    android:layout_marginBottom="@dimen/activity_vertical"
                    android:lineSpacingMultiplier="1"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal"
                    android:layout_marginRight="@dimen/activity_horizontal"
                    android:layout_marginBottom="@dimen/activity_vertical">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            style="@style/TextSpec.Field"
                            android:text="@string/tv_status" />

                        <TextView
                            android:id="@+id/tv_item_status_2"
                            style="@style/TextSpec.Value"
                            android:text="@string/tv_status"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            style="@style/TextSpec.Field"
                            android:text="@string/tv_desc" />

                        <TextView
                            android:id="@+id/tv_item_info"
                            style="@style/TextSpec.Value"
                            android:layout_height="85dp"
                            android:text="@string/tv_desc"/>
                    </TableRow>


                </TableLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/btn_change_status"
                        android:layout_width="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="@dimen/activity_vertical"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_status_change" />

                </RelativeLayout>
                </LinearLayout>
        </RelativeLayout>
    </FrameLayout>

</ScrollView>