<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="204dp"
        android:layout_height="131dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/logo_large"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.497"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextContent.Large"
        android:layout_marginStart="@dimen/activity_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/activity_horizontal"
        android:text="@string/tv_title_name"
        android:textColor="@color/coloronSecondary"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.498"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TextContent.Large"
        android:layout_marginTop="8dp"
        android:text="@string/tv_subtitle"
        android:textColor="@color/coloronSecondary"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.497"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_menu"
        card_view:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="-31dp">

        <TextView
            android:id="@+id/textView3"
            style="@style/TextContent"
            android:layout_marginTop="16dp"
            android:text="@string/tv_category_menu"
            android:textSize="24sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view1"
            android:layout_width="171dp"
            android:layout_height="115dp"
            android:layout_marginStart="@dimen/activity_horizontal"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardBackgroundColor="@color/colorPrimary"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="10dp"
            card_view:cardMaxElevation="10dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/textView3">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical"
                android:src="@drawable/ic_access_time_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical"
                android:gravity="center_horizontal"
                android:text="@string/tv_process"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view2"
            android:layout_width="171dp"
            android:layout_height="115dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardBackgroundColor="@color/colorPrimary"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="10dp"
            card_view:cardMaxElevation="10dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.542"
            card_view:layout_constraintStart_toEndOf="@+id/card_view1"
            card_view:layout_constraintTop_toBottomOf="@+id/textView3">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical"
                android:src="@drawable/ic_account_balance_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical"
                android:gravity="center_horizontal"
                android:text="@string/tv_taken"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view3"
            android:layout_width="171dp"
            android:layout_height="115dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/activity_horizontal"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardBackgroundColor="@color/colorPrimary"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="10dp"
            card_view:cardMaxElevation="10dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/card_view1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/activity_vertical"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_undo_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical"
                android:gravity="center_horizontal"
                android:text="@string/tv_return"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view4"
            android:layout_width="171dp"
            android:layout_height="115dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="32dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardBackgroundColor="@color/colorPrimary"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="10dp"
            card_view:cardMaxElevation="10dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.503"
            card_view:layout_constraintStart_toEndOf="@+id/card_view3"
            card_view:layout_constraintTop_toBottomOf="@+id/card_view2"
            card_view:layout_constraintVertical_bias="0.0">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/activity_vertical"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_add_box_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical"
                android:gravity="center_horizontal"
                android:text="@string/tv_add"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>